# line_follower

./: .gitignore  CLAUDE.md  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  add_ubsan.py  platformio.ini
doc/: hardware_bugs.txt  line_sensor_kernels.ipynb  short_introduction-robotic_day_2019.txt
doc/robotic_day_2019/: short_introduction.txt
docs/: index.md  instructions.md
docs/robotic_day_2023/: poster_text_cz.txt  poster_text_en.txt  short_description_cz.txt  short_description_en.txt
eagle/: eagle.epf  line_follower.brd  line_follower.sch  untitled.lbr
fusion360/: README.md  board-base-sketches.f3d  board.f3d  lf.f3d  lf.f3z
fusion360/LF-exporter/: LF-exporter.manifest  (+1 more)
jupyter/: Encoder_smoothing_least_squares.ipynb  line_sensor_kernels.ipynb  rangefinder_decoding.ipynb
kicad/: .gitignore  line_follower-cache.lib  line_follower.kicad_pcb  line_follower.pro  line_follower.sch
line_follower/: line_follower.ino
line_follower-rs/: .gitignore  Cargo.toml
line_follower-rs/.cargo/: config.toml
line_follower-rs/.helix/: languages.toml
line_follower-rs/src/: lib.rs
line_follower-rs/src/hal/: mod.rs  motors.rs
solidworks/: LF_box_clip_mid.STL  LF_box_clip_outer.STL  LF_box_lower.STL  LF_box_upper.STL  XT60.SLDPRT  ball_caster.SLDPRT  ball_caster_3_8.SLDPRT  battery.SLDPRT  board.SLDPRT  board_cutting.SLDASM  board_cutting.SLDDRW  board_simplified.DXF  board_simplified.SLDPRT  board_simplified_x.DXF  bottom_layer.p2m  box.SLDPRT  connector.SLDPRT  heatsink.SLDPRT  line_follower.SLDASM  line_follower_box.SLDPRT  line_follower_simplified.SLDASM  motor_bracket.SLDPRT  pololu_40_mm_wheel.SLDPRT  pololu_60_mm_wheel.SLDPRT  pololu_micro_gear_motor_extended_shaft.SLDPRT  sensor_board.SLDPRT  sensor_board_spacer.SLDPRT  sensor_bracket.SLDPRT  sensor_bracket_3dp.SLDPRT  sharp_distance_sensor.SLDPRT  slider_3dp.SLDPRT  stiffener.SLDPRT  supercap_18x40.SLDPRT  testing_map.sldprt  top_layer.p2m  wheel_experiment.SLDPRT  wheel_experiment.STL
src/: Bootup.cpp  Bootup.h  ErrorState.cpp  ErrorState.h  FollowingLine.cpp  FollowingLine.h  Hal.h  LfHal.cpp  LfHal.h  Makefile  Pid.h  RobotHal.cpp  RobotHal.h  SpeedController.h  StateMachine.cpp  StateMachine.h  StatesXMacro.h  Vector3D.h  Waiting.cpp  Waiting.h  defines.h  idf_util.h  main.cpp  parameters.h
test/: EncoderObserver.cpp  main.cpp
testing_map/: testing_map1.sldprt
toolchain/: .config  .gitignore  Readme.txt
(+75 files in other folders)
